--- a/blog.html
+++ b/blog.html
@@ -66,5 +66,8 @@
 <p> The main series consists of eight survival horror video games taking place in locations somehow connected to a fictional family pizza restaurant franchise named "Freddy Fazbear’s Pizza", after its mascot, the animatronic bear Freddy Fazbear. In most games, the player assumes the role of a night-time employee, who must utilise tools such as security cameras, lights, doors, and vents to defend themselves against hostile animatronic characters that inhabit the locations. The series has an extensive lore that is gradually revealed through various voice recordings, minigames, and easter eggs, and revolves around various disturbing incidents in the locations' history, which started with a series of child murders carried out by one of the original restaurant's co-founders.
 The franchise also includes spin-off games and other media, including a novel trilogy and an anthology series, comprising an all-encompassing fictional universe. The franchise maintains an active fanbase, known for its production of fan art and fangames, and merchandise for the games is available internationally.</p>
 
-</body>
+ <p style="color:#FF0000";>The End</p>
+ 
+ </body>
+
 </html>
